flux/apps/echo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo
  namespace: echo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: http-echo
      namespace: echo
  template:
    metadata:
      labels:
        app: http-echo
        namespace: echo
    spec:
      containers:
        - name: http-echo
          image: mendhak/http-https-echo:latest@sha256:a265f55c86cb3baead76fdf379dc8e9e6440ed121874e101e60b833e05bce8d4
          ports:
            - containerPort: 8080
