flux/apps/echo/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-echo
  namespace: echo
  annotations:
    external-dns.kubernetes.io/ttl: "300"
spec:
  parentRefs:
    - name: traefik
      namespace: kube-system
      kind: Gateway
      sectionName: websecure
  hostnames:
    - echo.h3rmt.dev
    - test.h3rmt.dev
    - echo-test.h3rmt.dev
    - echo-test-2.h3rmt.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: http-echo
          namespace: echo
          port: 8080
